[package]
name = "risc0-guest"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "3.0.4", default-features = false, features = ["std"] }
kzg-rs-blend = { path = "../crates/kzg-rs-blend" }

[workspace]

[profile.release]
opt-level = 3
lto = true

[patch.crates-io]
# revm = { git = "https://github.com/taikoxyz/revm.git", branch = "v36-taiko-shasta" }
# revm-primitives = { git = "https://github.com/taikoxyz/revm.git", branch = "v36-taiko-shasta" }
# revm-precompile = { git = "https://github.com/taikoxyz/revm.git", branch = "v36-taiko-shasta" }
# c-kzg = { git = "https://github.com/brechtpd/c-kzg-4844", branch = "for-alpha7" }
# blst = { git = "https://github.com/smtmfft/blst.git", branch = "v0.3.15-serialize" }
# crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.2-risczero.0" }
# k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.4-risczero.1" }
# sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.6-risczero.0" }
# tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", tag = "tiny-keccak/v2.0.2-risczero.0"}
# substrate-bn = { git = "https://github.com/risc0/paritytech-bn", tag = "v0.6.0-risczero.0" }
# p256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "p256/v0.13.2-risczero.1" }
kzg-rs = { git = "https://github.com/smtmfft/kzg-rs.git", branch="risc0-kzg-rs" }